fixed width on mobile destination page

--- a/src/scss/destination/_destinations.scss
+++ b/src/scss/destination/_destinations.scss
@@ -49,6 +49,7 @@
 }
 @include mobile{
     position: absolute;
+    width: auto;
 }
 @include smt{
     top: 35%;
